--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                         <label for="monthlyBalance">Сумма</label>
                         <input type="number" id="monthlyBalance" placeholder="0.00" min="0" step="0.01">
                         <div class="button-group">
-                            <button type="button" id="setBalanceBtn" class="btn-secondary">Установить</button>
-                            <button type="button" id="decreaseBalanceBtn" class="btn-secondary btn-decrease">Уменьшить</button>
+                            <button type="button" id="setBalanceBtn" class="btn-secondary">Установить баланс</button>
+                        </div>
+                        <div class="button-group">
+                            <button type="button" id="addToBalanceBtn" class="btn-secondary">Добавить на баланс</button>
+                            <button type="button" id="decreaseBalanceBtn" class="btn-secondary btn-decrease">Уменьшить баланс</button>
                         </div>
                     </div>
                 </div>
